k8s/services/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rafi-service
spec:
  selector:
    team: analytics
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
