k8s/services/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    workgroup: server
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
