k8s/services/ingress-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /server(/|$)(.*)
            backend:
              serviceName: server-service
              servicePort: 80
          - path: /client(/|$)(.*)
            backend:
              serviceName: client-service
              servicePort: 80
